--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,42 +1,49 @@
-/*
-Seletores
-adiciona o nome das
-tags e separa com virgula
-*/
+body {
+    font-family: "Crimson Text", "Times New Roman", serif;
+    background-color: #F2FFFC;
+    font-size: 120%;
+}
 
-h1 {
-    color: #e2e5ec;
+h1,
+h2 {
+    font-family: "Open Sans Condensed", "Arial", sans-serif;
+}
+
+main h1 {
     text-align: center;
-    text-align: center;
-    background-color: #702663;
-    font-family: "Open Sans ", sans-serif;
+    background-color: #3156be;
+    color: #FFF;
 }
 
 p {
-    color: #005599;
-    text-align: center;
-    font-family: "Open Sans ", sans-serif;
+    text-align: justify;
 }
 
-* {
-    margin: 0;
-    padding: 0;
+blockquote {
+    background-color: #D9E5E3;
 }
 
-h2 {
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    color: #686868;
+aside {
+    background-color: #3156be;
+    color: #FFF;
+    color: #F2FFFC;
 }
 
-li {
-    color: #e2e5ec;
-    text-align: center;
-    margin: 0;
-    padding: 0;
+footer {
+    background-color: #000;
+    color: #F2FFFC;
 }
 
-nav {
-    background-color: #702663;
+nav a {
+    color: #F2FFFC;
+}
+
+main a {
+    color: #3156be;
+    color: #FFF;
+}
+
+aside a {
+    color: inherit;
+    font-family: "Open Sans Condensed", sans-serif;
 }
