--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,8 +11,8 @@ h2 {
 
 main h1 {
     text-align: center;
-    background-color: #3156be;
-    color: #FFF;
+    background-color: #7691db;
+    color: #494848;
 }
 
 p {
@@ -20,30 +20,31 @@ p {
 }
 
 blockquote {
-    background-color: #D9E5E3;
+    background-color: #b3c7cf;
 }
 
 aside {
-    background-color: #3156be;
+    background-color: #7691db;
+    color: #FFF;
+    color: #FFF;
     color: #FFF;
     color: #F2FFFC;
 }
 
 footer {
     background-color: #000;
-    color: #F2FFFC;
+    color: #fff;
 }
 
 nav a {
-    color: #F2FFFC;
+    color: #494848;
 }
 
 main a {
-    color: #3156be;
-    color: #FFF;
+    color: #494848;
 }
 
 aside a {
-    color: inherit;
+    color: #494848;
     font-family: "Open Sans Condensed", sans-serif;
 }
